# npy

./: .gitignore  Cargo.toml  README.md  installer.iss  installer_dev.iss
.github/workflows/: release.yaml
distr/: npy_shell.bat
output/swiss_target_prediction/: _H_OC1SC_OC2_CC_C_O_H__C_C2_C_COC_C__O_OC__O_S1.csv  _H_OCC1OC__O_SC_O_H__SC1OC1_CC_C_O_H__C_C1.csv
src/: main.rs
src/cli/: args.rs  mod.rs
src/config/: default.yaml  loader.rs  mod.rs  models.rs
src/scraper/: mod.rs
src/scraper/swisstarget/: client.rs  job.rs  mod.rs  parse.rs  poll.rs
