[package]
name = "npy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
dotenvy = "0.15.7"
indicatif = "0.18.3"
regex = "1.12.2"
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", features = ["cookies", "rustls-tls"] }